...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Type"
            android:textColor="@color/text"/>

        <Spinner
            android:id="@+id/login_account_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:background="@drawable/background_text_solid_white"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="15dp"
            android:hint="Enter Username Here"
            android:background="@drawable/background_text_solid_white"
            android:padding="8dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Enter Password Here"
            android:inputType="textPassword"
            android:textSize="15dp"
            android:background="@drawable/background_text_solid_white"
            android:padding="8dp"
            android:importantForAutofill="no"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="12dp"
...
