...
        app:layout_constraintBottom_toTopOf="@id/backMainBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



            android:id="@+id/msgEdt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="Type a message..."
            android:textSize="16sp"
            android:background="@android:color/white"
            android:padding="12dp"
            android:layout_marginEnd="8dp"
            android:elevation="4dp" />

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="Send"
            android:padding="12dp" />
    </LinearLayout> -->

...
