...
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp">

            <ImageView
                android:id="@+id/chat"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_chat"
                android:importantForAccessibility="no" />

            <TextView
...
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp">

            <ImageView
                android:id="@+id/shifts"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_shifts"
                android:importantForAccessibility="no" />

            <TextView
...
