...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </ScrollView>

    <Button
        android:id="@+id/backwardWeekButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="41dp"
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/forwardWeekButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="288dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="41dp"
...
